@@ -1,10 +1,13 @@
 Changes
 lib/E/Mail/Acme.pm
+lib/Email/Abstract/EMailAcme.pm
 LICENSE
 Makefile.PL
 MANIFEST			This list of files
 README
+t/abstract.t
 t/pod-coverage.t
 t/pod.t
+t/send.t
 t/simple.t
 META.yml                                 Module meta-data (added by MakeMaker)
